# peppermint

./: .gitignore  AGENTS.md  LICENSE  pyproject.toml
.github/workflows/: ci.yml
src/peppermint/: __init__.py  config.py  descriptors.py  factories.py  persistence.py  traits.py
tests/: assets.py  conftest.py  test_descriptors.py  test_factories.py
