[project]
name = "peppermint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "alex.oleshkevich", email = "alex.oleshkevich@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "faker>=40.4.0",
]

[project.scripts]
peppermint = "peppermint:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "attrs>=25.4.0",
    "msgspec>=0.20.0",
    "pydantic>=2.12.5",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.2",
    "ty>=0.0.18",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src", "tests"]
respect-gitignore = true
force-exclude = true
preview = false
fix = false
show-fixes = true

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    # flake8-bugbear.
    "B",
    # flake8-comprehensions.
    "C4",
    # flake8-simplify.
    "SIM",
    # pep8-naming.
    "N",
    # flake8-annotations.
    "ANN",
    # Ruff-specific rules.
    "RUF",
]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true
ignore-fully-untyped = false
suppress-dummy-args = true
allow-star-arg-any = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ty]

[tool.ty.environment]
python-version = "3.13"
python-platform = "all"
root = [".", "./src"]

[tool.ty.src]
include = ["src", "tests"]
exclude = ["_generated", ".venv", "build", "dist"]
respect-ignore-files = true

[tool.ty.terminal]
output-format = "full"
error-on-warning = true

[tool.ty.rules]
all = "error"
